# CS510_COMPUTER_VISION_AND_DEEP_LEARNING

./: .gitignore  README.md  pyproject.toml
KaggleCovid19Detection/covid19detection/: common.py  custom_cnn.py  study_classification.py  transfer_learning.py  two_head_model.py
KaggleCovid19Detection/results/: VGG16_pre_model_filters.txt  VGG16_pre_model_summary.txt  VGG16_with_1_hidden_layers_summary.txt  VGG16_with_2_hidden_layers_summary.txt  VGG16_with_3_hidden_layers_summary.txt  VGG16_with_study_labels_only_pre_model_summary.txt  VGG16_with_study_labels_only_with_1_hidden_layers_summary.txt
Programming1/Part1ImagePreProcessing/: imageFilter.py
Programming1/Part2KMeans/: kmeans.py
Programming1/Part3SIFT/: SIFTkeypointMatching.py
Programming2/clustering/: gmm.py  kmeans.py
Programming3/classification/: transferLearningCNN.py
Programming3/results/: step1_pre_model_filters.txt  step1_pre_model_summary.txt  step3_transfer_model_summary.txt
Programming4/saliency/: gradCAM.py
Programming5/modelCompression/: lowRankModelCompression.py
Programming5/results/: step1_dense_model_summary.txt  step2_2X_low_rank_model_summary.txt  step2_4X_low_rank_model_summary.txt  step2_8X_low_rank_model_summary.txt
