[tool.poetry]
name = "cs510_computer_vision_and_deep_learning"
version = "0.1.0"
description = ""
authors = ["VinodhKotipalli <50426917+VinodhKotipalli@users.noreply.github.com>"]

[tool.poetry.dependencies]
python = "^3.9"
numpy = "^1.20.2"
opencv-python = "^4.5.1"
matplotlib = "^3.4.1"
torch = "^1.8.1"
pandas = "^1.2.4"

[tool.poetry.dev-dependencies]
pytest = "^6.2.3"


[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
