[tool.poetry]
name = "cs510_computer_vision_and_deep_learning"
version = "0.1.0"
description = ""
authors = ["VinodhKotipalli <50426917+VinodhKotipalli@users.noreply.github.com>"]

[tool.poetry.dependencies]
python = "^3.7"
matplotlib = "^3.4.1"
pandas = "^1.2.4"
opencv-python = "^4.5.1"
sklearn = "^0.0"
seaborn = "^0.11.1"
tensorflow = "^2.5.0"
tensorflow-gpu = "^2.5.0"

[tool.poetry.dev-dependencies]


[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
